--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ant-design-vue/pro-layout": "^0.3.4",
     "@antv/data-set": "^0.10.2",
+    "@antv/g2": "^4.0.12",
     "ant-design-vue": "^1.6.0",
     "antd": "^4.3.5",
     "axios": "^0.19.0",
