--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
     "axios": "^0.19.0",
     "bin-code-editor": "^0.8.0",
     "core-js": "^3.1.2",
+    "element-ui": "^2.13.2",
     "enquire.js": "^2.1.6",
+    "file": "^0.2.2",
+    "jshint": "^2.12.0",
+    "jsonlint": "^1.6.3",
     "lodash.clonedeep": "^4.5.0",
     "lodash.get": "^4.4.2",
     "lodash.pick": "^4.4.0",
@@ -27,8 +31,10 @@
     "mockjs2": "1.0.8",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
+    "script-loader": "^0.7.2",
     "sql-formatter": "^2.3.3",
     "store": "^2.0.12",
+    "system": "^2.0.1",
     "v-jsoneditor": "^1.4.1",
     "viser-vue": "^2.4.6",
     "vue": "^2.6.10",
